Fixed some small Java errors (equals called on strings, etc)